[package]
name = "quotick"
version = "0.1.0"
authors = ["19h <kenan@sig.dev>", "SIGDEV LLC <hello@sig.dev>"]
edition = "2018"
readme = "readme.md"
description = "Embedded tick market data (trade, quote, ..) database storage optimized for billions of data points."
license-file = "license.txt"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
memmap = "0.7.0"
radix_trie = { version = "0.2.1", features = ["serde"] }
serde = "1.0.129"
serde_derive = "1.0.129"
uuid = "0.8.2"
