[package]
name = "quotick"
version = "0.2.0-alpha.0"
authors = ["19h <kenan@sig.dev>", "SIGDEV LLC <hello@sig.dev>"]
edition = "2018"
readme = "readme.md"
description = "Embedded tick market data (trade, quote, ..) database storage optimized for billions of data points."
license-file = "license.txt"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
endian-type = "0.1.2"
memmap = "0.7.0"
miniz_oxide = "0.5.1"
nibble_vec = "0.1.0"
rand = "0.8.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_test = "1.0.130"
uuid = "0.8.2"

[profile.release]
lto = true

[profile.dev]

[dev-dependencies]
quickcheck = "1.0.3"
